--- a/src/css/base.css
+++ b/src/css/base.css
@@ -31,7 +31,6 @@ body {
   font-weight: 400;
 
   color: #213721;
-  /* background-color: rgba(255, 255, 255, 0.87); */
 }
 
 main {
@@ -70,6 +69,10 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+svg {
+  display: block;
 }
 
 ::-webkit-scrollbar {
