--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -19,10 +19,6 @@
     gap: 32px;
 }
 
-.contact-icon {
-    /* flex-shrink: 0; */
-}
-
 .contact-box {
     display: flex;
     flex-direction: column;
@@ -37,14 +33,14 @@
 }
 
 .contact-title {
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
     font-weight: 300;
     font-size: 20px;
     color: #899f87;
 }
 
 .contact-subtitle {
-    font-family: "Bodoni Moda", sans-serif;
+    font-family: var(--second-family);
     font-size: 24px;
     line-height: 1.2;
 }
@@ -56,7 +52,7 @@
     flex-direction: row;
     gap: 10px;
 
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
     letter-spacing: 0.01em;
 }
 
@@ -69,14 +65,11 @@
     width: 1px;
     height: 88px;
 
-    background: #d9d9d9;
+    background-color: #d9d9d9;
     transform: rotate(90deg);
 }
 
 @media only screen and (min-width: 1440px) {
-    .contact-section {
-        background-color: #f2f6f0;
-    }
     .contact-box-size {
         max-width: 1440px;
         flex-direction: row;
