--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,14 +1,8 @@
-.footer {
-    background-color: #f2f6ef;
-}
-
 .ft-container-size {
     min-width: 375px;
-    background-color: #f2f6ef;
 }
 
 .container {
-    
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -32,16 +26,12 @@
     margin-bottom: 64px;
 }
 
-.footer-logo {
-    display: inline-block;
-}
-
 .footer-icon-logo {
     color: #213721;
 }
 
 .opening {
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
     text-align: center;
 }
 
@@ -78,7 +68,7 @@
 }
 
 .nav-title {
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
     font-weight: 300;
     font-size: 28px;
     line-height: 1.1;
@@ -94,7 +84,7 @@
 }
 
 .ft-nav-item {
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
     font-size: 22px;
 }
 
@@ -114,12 +104,12 @@
     padding: 32px 0;
     margin: 0 auto;
 
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
     font-size: 12px;
 }
 
 .designer {
-    font-family: "Poppins", sans-serif;
+    font-family: var(--font-family);
     font-size: 18px;
     text-align: center;
     font-style: normal;
