--- a/src/css/subscribe.css
+++ b/src/css/subscribe.css
@@ -14,7 +14,7 @@
 }
 
 .sub-title {
-    font-family: "Bodoni Moda", sans-serif;
+    font-family: var(--second-family);
     font-weight: 300;
     font-size: 40px;
     line-height: 1.2;
@@ -37,7 +37,7 @@
     width: 255px;
     height: 72px;
     &::placeholder{
-        font-family: "Poppins", sans-serif;
+        font-family: var(--font-family);
         font-weight: 300;
         color: #899f87;
     }
