--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -44,23 +44,13 @@
         </li>
 
         <li class="about_logo">
-          <svg
-            class="thought-catalog"
-            width="160"
-            height="48"
-            aria-label="Thought Catalog"
-          >
+          <svg class="thought-catalog" width="160" height="48" aria-label="Thought Catalog">
             <use href="/img/icons.svg#thought-catalog"></use>
           </svg>
         </li>
 
         <li class="about_logo">
-          <svg
-            class="womens-health"
-            width="160"
-            height="40"
-            aria-label="Women’s Health"
-          >
+          <svg class="womens-health" width="160" height="40" aria-label="Women’s Health">
             <use href="/img/icons.svg#womens-health"></use>
           </svg>
         </li>
@@ -79,7 +69,7 @@
     <h4 class="cta-title">Let's see the processing of our products</h4>
     <!-- <button type="button" class="cta-btn"></button> -->
     <a href="">
-      <svg class="cta-icon" width="120" height="36" aria-label="Vogue">
+      <svg class="cta-icon" width="66" height="40" aria-label="Vogue">
         <use href="/img/icons.svg#arrow-right"></use>
       </svg>
     </a>
