--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <hr class="about_divider" />
+    <span class="about_divider"></span>
 
     <!-- Нижній блок: "As seen in" + логотипи -->
     <div class="about_bottom">
