--- a/src/css/ingredients.css
+++ b/src/css/ingredients.css
@@ -9,7 +9,7 @@
   background-color: #f2f6ef;
 }
 .ingder-left-title {
-  font-family: 'Bodoni Moda', serif;
+  font-family: var(--second-family);
   font-weight: 300;
   font-size: 40px;
   line-height: 1.2;
